# ayon-equalizer

./: .gitignore  README.md  create_package.py  mkdocs.yml  mkdocs_hooks.py  package.py  pyproject.toml  versions.json
.github/workflows/: deploy_mkdocs.yml  pr_linting.yml
0.1.0/: 404.html  index.html  license.html
0.1.0/autoapi/: summary.html
0.1.0/autoapi/client/ayon_equalizer/: addon.html  index.html  version.html
0.1.0/autoapi/server/: index.html
0.1.0/autoapi/server/settings/: creator_plugins.html  index.html  main.html
0.1.0/search/: search_index.js  search_index.json
0.1.4/: index.html  license.html
0.1.4/autoapi/client/ayon_equalizer/: addon.html
0.1.4/autoapi/server/settings/: index.html
0.1.4/search/: search_index.js  search_index.json
0.1.5/: 404.html  objects.inv
0.1.5/autoapi/: summary.html
0.1.5/autoapi/client/ayon_equalizer/: index.html  version.html
0.1.5/autoapi/server/: index.html
0.1.5/autoapi/server/settings/: creator_plugins.html  main.html
0.1.5/search/: search_index.js  search_index.json
0.2.0/: 404.html  index.html  license.html
0.2.0/autoapi/: summary.html
0.2.0/autoapi/client/ayon_equalizer/: addon.html  index.html  version.html
0.2.0/autoapi/server/: index.html
0.2.0/autoapi/server/settings/: creator_plugins.html  index.html  main.html
0.2.0/search/: search_index.js  search_index.json
0.2.1/: 404.html  index.html  objects.inv
0.2.1/autoapi/client/ayon_equalizer/: index.html
0.2.1/search/: search_index.js  search_index.json
0.2.2/: index.html  license.html  objects.inv
0.2.2/autoapi/: summary.html
0.2.2/autoapi/server/settings/: creator_plugins.html  main.html
0.2.2/search/: search_index.js  search_index.json
client/ayon_equalizer/: __init__.py  addon.py  version.py
client/ayon_equalizer/api/: __init__.py  host.py  lib.py  pipeline.py  plugin.py
client/ayon_equalizer/hooks/: __init__.py  pre_add_last_workfile_arg.py  pre_install_qt_bindings.py  pre_pyside2_install.py
client/ayon_equalizer/plugins/: __init__.py
client/ayon_equalizer/plugins/create/: __init__.py  create_lens_distortion_data.py  create_matchmove.py
client/ayon_equalizer/plugins/load/: __init__.py  load_model.py  load_plate.py
client/ayon_equalizer/startup/: __init__.py  ayon_create.py  ayon_load.py  ayon_manage.py  ayon_publish.py  ayon_workfile.py
client/ayon_equalizer/test/: test_plugins.py
docs/: index.md
server/: __init__.py
server/settings/: __init__.py  creator_plugins.py  main.py
test-build/: 404.html  index.html  license.html  objects.inv
test-build/autoapi/: summary.html
test-build/autoapi/server/: index.html
test-build/search/: search_index.js  search_index.json
tools/: manage.ps1
(+187 files in other folders)
